--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ max-width: 100%; /* To ensure the image doesn't exceed the container's width */
 /* aligns the margins */
 .align-margins {
     margin: 0;
-    margin-top: 1em; /* Adjust the margin-top value to align the margins as desired */
+    margin-top: 1em;
 }
 
 
